# Cmake

./: CMakeLists.txt  Licence.txt  OLASConfig.h.in  ReadMe.txt  build.bat  configure.bat  createInstaller.bat  install.bat  main.cpp  run.bat
arhive/test_1/: CMakeLists.txt
arhive/test_2/: CMakeLists.txt  main.cpp
arhive/test_3/: CMakeLists.txt
test_3/: main.cpp
test_4/: CMakeLists.txt  adder.h  main.c  main.cpp
test_4/adder/: adder.cpp
